jar file with vm argument