@@ -3,3 +3,11 @@
 ### Chanathip and Chayapol
 
 ### Ajarn Run
+
+<hr>
+
+VM argument
+--module-path {PATH_TO_JAVAFX} --add-modules javafx.graphics,javafx.controls,javafx.fxml,javafx.media
+
+example
+--module-path "C:\Program Files\Java\javafx-sdk-11\lib" --add-modules javafx.graphics,javafx.controls,javafx.fxml,javafx.media
